--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Nuvora.png" />
+    <link rel="icon" type="image/svg+xml" href="/Nuvora1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet">
-    <title>Nuvora</title>
+    <title>Nuvora - Skill Exchange Platform</title>
   </head>
   <body>
     <div id="root"></div>
