Add google-site-verification meta tag for SEO

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="OGIJCoRoSdnqZQJpEh5xEf5dazYuieJ8RkpuCH9l-8I" />
     <link rel="icon" type="image/png" href="/Nuvora_BG.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nuvora - Skill Exchange Platform</title>
